refactor: replace follower-based fanout with audience-based logic and add batch upload DTOs